--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ethersproject/abi": "^5.0.12",
     "@ethersproject/solidity": "^5.0.9",
     "@pumpup/v3-periphery": "^1.0.3",
-    "@uniswap/sdk-core": "https://github.com/pumpuplabs/sdk-core-v3-info.git",
+    "@uniswap/sdk-core": "https://github.com/pumpuplabs/sdk-core.git",
     "@uniswap/v3-staker": "1.0.0",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3"
